# py_gaussian

./: LICENSE  README.md  exceptions.py  gen_gaussian.py  pyproject.toml  setup.py
py_gaussian/: config.py  gen_crest.py  gen_gaussian.py  gen_job.py  gen_orca.py  gen_plot.py  utils.py
